<resources>
    <string name="app_name">DONT RELY ON YOUR BRAIN</string>
    <string name="the_body_of_the_note">The body of the note</string>
    <string name="title_of_your_note">Title of your note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">testTextField</string>
    <string name="My_Note_Title">My Note Title Goes Here...</string>
    <string name="My_Note_Content">My Note Content</string>
    <string name="Today">At</string>
    <string name="My_Note_Title_Show">Edit Title</string>
    <string name="My_Note_Content_Show">Edit Content</string>
    <string name="Today_Show">Edit Date</string>
    <string name="textview">TextView .........</string>
    <string name="edit_text_write_something">Edit TEXT ..... write something</string>
    <string name="value_send_by_user">Value send by user</string>
</resources>