<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditFragment"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/linearLayoutEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-34dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/My_Note_Title_Show">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFF00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/My_Note_Content_Show">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFF00" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutEdit"
        android:hint="@string/label"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutEdit"
        app:layout_constraintTop_toTopOf="@+id/txtDate"
        android:backgroundTint="@color/material_on_primary_emphasis_high_type"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/material_on_primary_emphasis_high_type"/>

</androidx.constraintlayout.widget.ConstraintLayout>