<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment"
    android:background="@color/main_background">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-174dp"
        tools:layout_editor_absoluteY="185dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/My_Note_Title"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_background"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/My_Note_Content"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_background"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Today"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFF00"/>

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/material_on_primary_emphasis_high_type"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/shareFab"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/material_on_primary_emphasis_high_type"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>